# tt-support-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  caravel.py  cells.py  config.py  config.yaml  config_utils.py  configure.py  discord_bot.py  doc_utils.py  documentation.py  flake.nix  flamegraph.py  gds_compare.py  git_utils.py  lint.sh  logo.py  markdown_utils.py  orders.py  project.py  project_checks.py  project_info.py  projects.yaml  pyproject.toml  reharden.py  render_utils.py  reports.py  requirements.txt  rom.py  shuttle.py  shuttle_index.py  tech.py  test_project_info.py  tile_sizes.yaml  tt_annotate.py  tt_db_config.py  tt_fpga.py  tt_logging.py  (+1 more)
caravel_template/: dump_pic.rb  klayoutrc  upw_config.json
def/: tt_block_1x1.def  tt_block_1x1_pg.def  tt_block_1x2.def  tt_block_1x2_pg.def  tt_block_2x2.def  tt_block_2x2_pg.def  tt_block_3x2.def  tt_block_3x4_pg.def  tt_block_4x2.def  tt_block_4x2_pg.def  tt_block_4x4_pg.def  tt_block_5x4_pg.def  tt_block_6x2_pg.def  tt_block_6x4_pg.def  tt_block_8x2.def  tt_block_8x2_pg.def  tt_block_8x4_pg.def  tt_block_micro.def
docs/: CREDITS.md  ERRATA.md  INFO.md  PINOUT.md  README_init.md  STA.md  datasheet.md  datasheet.typ.mustache  doc_header.md  doc_header.md.mustache  doc_template.md  doc_template.md.mustache  hardening.md  hugo_index_template.md  hugo_index_template.md.mustache  hugo_template.md  hugo_template.md.mustache  project_header.md  project_preview.md  project_preview.md.mustache  shuttle_index_header.md.mustache  silicon_validation.md  user_project.typ.mustache
fpga/: tt_fpga_fabricfox.pcf  (+2 more)
(+196 files in other folders)
