[project]
name = "tt-support-tools"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "appdirs",
    "brotli",
    "CairoSVG",
    "chevron",
    "cocotb",
    "gdstk",
    "GitPython",
    "klayout<0.30.0,>=0.29.0",
    "mistune",
    "numpy<2",
    "pytz",
    "pre-commit",
    "pytest",
    "python-frontmatter",
    "PyYAML",
    "requests",
    "stripe",
    "yowasp-yosys",
    "zipp",
    "matplotlib"
]

[tool.setuptools]
packages = []
